--- a/modules/system/css/system.admin.css
+++ b/modules/system/css/system.admin.css
@@ -108,44 +108,44 @@ span.admin-missing {
 /**
  * Report icons. Used on status report and updates list.
  */
-table td.report-icon {
+.report-icon {
   width: 16px;
   padding-right: 0; /* LTR */
   vertical-align: top;
 }
-[dir="rtl"] table td.report-icon {
+[dir="rtl"] td.report-icon {
   padding-left: 0;
   padding-right: 6px;
 }
-table td.report-icon div {
+.report-icon div {
   background-repeat: no-repeat;
   width: 28px;
   height: 28px;
 }
-table td.report-icon div:before {
+.report-icon div:before {
   content: "";
   display: block;
   width: 28px;
   height: 28px;
   border-radius: 15px;
 }
-table tr.report-unknown td.report-icon div:before {
+.report-unknown .report-icon div:before {
   background: #CCCCCC url(../../../misc/icon-question.png) no-repeat center center;
   background-size: 60%;
 }
-table tr.report-info td.report-icon div:before {
+.report-info .report-icon div:before {
   background: #CCCCCC url(../../../misc/icon-info.png) no-repeat center center;
   background-size: 60%;
 }
-table tr.report-status td.report-icon div:before {
+.report-status .report-icon div:before {
   background: #CFDE56 url(../../../misc/icon-ok.png) no-repeat center center;
   background-size: 60%;
 }
-table tr.report-error td.report-icon div:before {
+.report-error .report-icon div:before {
   background: #EE3D23 url(../../../misc/icon-error.png) no-repeat center center;
   background-size: 60%;
 }
-table tr.report-warning td.report-icon div:before {
+.report-warning .report-icon div:before {
   background: #FCE400 url(../../../misc/icon-warning.png) no-repeat center center;
   background-size: 60%;
 }
@@ -153,39 +153,42 @@ table tr.report-warning td.report-icon div:before {
 /**
  * Status report.
  */
-table.system-status-report td {
+.system-status-report td {
   vertical-align: top;
 }
-table.system-status-report td.status-title {
+.system-status-report .status-title {
   font-weight: bold;
   line-height: 1.85em;
   color: #000;
 }
-table.system-status-report .status-summary-mobile {
+.system-status-report .status-value {
+  width: 100%; /* Fill up all remaining table space with this cell. */
+}
+.system-status-report .status-summary-mobile {
   display: block;
   font-weight: normal;
 }
-table.system-status-report .status-description {
+.system-status-report .status-description {
   font-size: 0.9em;
   color: #444;
 }
-table.system-status-report tr.report-error .status-summary {
+.system-status-report .report-error .status-summary {
   color: #EC351C;
 }
 @media all and (min-width: 721px) {
-  table.system-status-report .status-summary-mobile {
+  .system-status-report .status-summary-mobile {
     display: none;
   }
 }
 @media all and (min-width: 768px) {
-  table.system-status-report td {
+  .system-status-report td {
     padding: 10px 20px;
   }
-  table.system-status-report td.status-title {
+  .system-status-report .status-title {
     white-space: nowrap;
   }
 }
-table.system-status-report tr.report-error .status-summary {
+.system-status-report .report-error .status-summary {
   color: #EC351C;
 }
 
