Issue #2513: Adjust view style for filters/operations to match importance.

--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -620,6 +620,7 @@ tr.selected td {
     display: none;
   }
 }
+
 /**
  * Fieldsets.
  *
@@ -730,6 +731,17 @@ fieldset .fieldset-wrapper {
   top: .75em;
   border: .32em solid transparent;
   border-left-color: black;
+}
+
+/**
+ * Views exposed form (matches fieldsets).
+ */
+form.views-exposed-form {
+  margin: 1em 0;
+  padding: 7px 13px;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 2px solid #EAEAEA;
 }
 
 /**
